# agent-tool-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tool-design-reference.md
docs/: best-practices.md
examples/ecommerce/: README.md  data.py  run.py  tools.py
examples/external_api/: README.md  fake_api.py  run.py  tools.py
examples/knowledge_base/: README.md  corpus.py  run.py  tools.py
src/agent_tool_kit/: __init__.py  base.py  classifier.py  compression.py  defensive.py  errors.py  idempotency.py  observability.py  registry.py
tests/: test_base.py  test_classifier.py  test_compression.py  test_defensive.py  test_examples.py  test_idempotency.py  test_observability.py  test_registry.py
